c2prj1_cards/grade.txt
Grading at Tue Aug 13 21:55:22 UTC 2019
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:75:12: error: multi-character character constant [-Werror=multichar]
       case '10': temp.value = 10; break;
            ^
cards.c:75:7: error: case label value exceeds maximum value for type [-Werror]
       case '10': temp.value = 10; break;
       ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
